--- a/assets/fontello/demo.html
+++ b/assets/fontello/demo.html
@@ -277,10 +277,11 @@ body {
       <div class="row">
         <div title="Code: 0xe010" class="the-icons span3"><i class="icon-twitter"></i> <span class="i-name">icon-twitter</span><span class="i-code">0xe010</span></div>
         <div title="Code: 0xe00f" class="the-icons span3"><i class="icon-filter"></i> <span class="i-name">icon-filter</span><span class="i-code">0xe00f</span></div>
+        <div title="Code: 0xe011" class="the-icons span3"><i class="icon-ok-squared"></i> <span class="i-name">icon-ok-squared</span><span class="i-code">0xe011</span></div>
         <div title="Code: 0xe00e" class="the-icons span3"><i class="icon-sort-alt-down"></i> <span class="i-name">icon-sort-alt-down</span><span class="i-code">0xe00e</span></div>
-        <div title="Code: 0xe009" class="the-icons span3"><i class="icon-thumbs-up"></i> <span class="i-name">icon-thumbs-up</span><span class="i-code">0xe009</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe009" class="the-icons span3"><i class="icon-thumbs-up"></i> <span class="i-name">icon-thumbs-up</span><span class="i-code">0xe009</span></div>
         <div title="Code: 0xe006" class="the-icons span3"><i class="icon-download"></i> <span class="i-name">icon-download</span><span class="i-code">0xe006</span></div>
       </div>
     </div>
